# Metis

./: .gitignore  AGENTS.md  CLAUDE.md  DREAMS.md  MEMORY.md  README.md  build.cj  cjpm.toml  skills-lock.json
.learnings/: LEARNINGS.md
benchmark/: problems.md
cj-rag/: .gitignore  README.md  main.py  pyproject.toml  serve.py
cj-rag/data/: .gitignore
cj-rag/src/: __init__.py  chunker.py  extractor.py  graph.py  jsonl_processor.py  models.py  retriever.py  vector_store.py
develop_steps/: metis-agent-team-runbook-en-2026-05-14.md  metis-agent-team-runbook-zh-2026-05-14.md  metis-agent-team-series-01-detailed-design-and-landing-plan-2026-05-11.md  metis-agent-team-series-05-phase0-phase8-evidence-test-baseline-completion-2026-05-13.md  metis-agent-team-series-06-openclaw-lark-source-gap-and-landing-plan-2026-05-14.md  metis-agent-team-series-07-phase8-9-ui-docs-closure-2026-05-14.md  metis-agent-team-series-11-post-phase0-9-source-recheck-gap-quantification-and-landing-plan-2026-05-14.md  metis-agent-team-series-12-current-source-recheck-gap-quantification-and-landing-plan-2026-05-14.md  metis-agent-team-series-12-docs-verification-completion-2026-05-14.md  metis-agent-team-series-13-control-ui-setup-wizard-completion-2026-05-15.md  metis-agent-team-series-13-feishu-auth-live-smoke-completion-2026-05-15.md  metis-agent-team-series-13-feishu-card-events-completion-2026-05-15.md  metis-agent-team-series-13-oapi-action-parity-report-2026-05-15.md  metis-agent-team-series-13-source-recheck-gap-quantification-manual-acceptance-2026-05-15.md  metis-agent-team-series-13-team-docs-runbook-2026-05-15.md  metis-agent-team-series-18-phase0-9-integration-verification-2026-05-15.md  metis-agent-team-series-18-phase2-completion-2026-05-15.md  metis-agent-team-series-24-manual-test-checklist-2026-05-17.md  (+28 more)
magic-data-backend/: .gitignore  Dockerfile  README.md  README_UV.md  pyproject.toml  simple_server.py
magic-data-backend/templates/: agent_chat_round_detail.html  agent_chat_rounds.html  api_documentation.html  dashboard.html  fix_summaries.html  fix_summary_detail.html
(+1099 files in other folders)
